use https for image

--- a/_posts/2017-01-20-learn-go.md
+++ b/_posts/2017-01-20-learn-go.md
@@ -69,4 +69,4 @@ Re-indent - my default vim setting is to expand tab so copy pasting existing Go 
 
 `vim-go` will automatically run `go-fmt` upon saving, so if let say you have wrong syntax, it will show the error:-
 
-<img src="http://i.imgur.com/xABkgzw.png" />
+<img src="https://i.imgur.com/xABkgzw.png" />
